# apptrackr

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pom.xml  pyproject.toml
.github/workflows/: python-package.yml
apptrackr/: config.py  db.py  llm.py  main.py  types.py
apptrackr/pages/: 0_Add_JD.py  0_Resumes.py  1_Applications.py  1_Job_Descriptions.py  1_List_applications.py  2_Generate_cover.py  3_Chat.py  3_Update_CV.py  4_Users.py
src/main/java/org/devonho/apptrackr/: Application.java  ApplicationController.java  ApplicationRepository.java  ApptrackrApplication.java  FirestoreFactory.java  JobListing.java
src/main/java/org/devonho/apptrackr/controllers/: ApplicationController.java  MarkerController.java
src/main/java/org/devonho/apptrackr/models/: Application.java  JobListing.java
src/main/java/org/devonho/apptrackr/repositories/: ApplicationRepository.java
src/main/resources/: application.properties
src/main/resources/public/: index.html
src/main/webapp/WEB-INF/jsp/: index.jsp
src/test/java/org/devonho/apptrackr/: ApptrackrApplicationTests.java
tests/: test_DB.py  test_types.py
