[tool.poetry]
name = "apptrackr"
version = "0.1.0"
description = "Job Application Tracker"
authors = ["Devon Ho <devonho@symplesys.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-firestore = "^2.19.0"
anthropic = "^0.42.0"
streamlit = "^1.41.1"
streamlit-authenticator = "^0.4.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
